Relative path change

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <hr class="separator">
 
     <div class="pdf-container">
-        <img src="/Media/GITHUB Y GIT.webp" alt="Cheatsheet GitHub" class="pdf-viewer">
+        <img src="./Media/GITHUB Y GIT.webp" alt="Cheatsheet GitHub" class="pdf-viewer">
     </div>
 </body>
 </html>
